tests/snapshots/integration__integration_tests__ci_status__list_full_with_github_pr_passed.snap
---
source: tests/integration_tests/ci_status.rs
info:
  program: wt
  args:
    - list
    - "--full"
  env:
    APPDATA: "[TEST_CONFIG_HOME]"
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: "[TEST_GIT_CONFIG]"
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    GIT_TERMINAL_PROMPT: "0"
    HOME: "[TEST_HOME]"
    LANG: C
    LC_ALL: C
    PATH: "[PATH]"
    SOURCE_DATE_EPOCH: "1735776000"
    USERPROFILE: "[TEST_HOME]"
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
    XDG_CONFIG_HOME: "[TEST_CONFIG_HOME]"
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
  [1mBranch[0m   [1mStatus[0m        [1mHEAD±[0m    [1mmain↕[0m     [1mmain…±[0m  [1mPath[0m             [1mRemote⇅[0m  [1mCI[0m  [1mCommit[0m    [1mAge[0m   [1mMessage
@ [1mmain[0m         [2m^[22m                                    [1m.[0m                         [4m[32m]8;;https://github.com/test-owner/test-repo/pull/1/●]8;;/[0m   [2ma1e809f5[0m  [2m1d[0m    [2mInitial commit
+ [2mfeature[0m      [2m_[22m                                    [2m../repo.feature[0m           [4m[32m]8;;https://github.com/test-owner/test-repo/pull/1/●]8;;/[0m   [2ma1e809f5[0m  [2m1d[0m    [2mInitial commit

⚪ [2mShowing 2 worktrees
