tests/snapshots/integration__integration_tests__ci_status__list_full_with_invalid_platform_override.snap
---
source: tests/integration_tests/ci_status.rs
info:
  program: wt
  args:
    - list
    - "--full"
  env:
    APPDATA: "[TEST_CONFIG_HOME]"
    CLICOLOR_FORCE: "1"
    COLUMNS: "500"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMON_DIR: ""
    GIT_CONFIG_GLOBAL: "[TEST_GIT_CONFIG]"
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_DIR: ""
    GIT_EDITOR: ""
    GIT_INDEX_FILE: ""
    GIT_OBJECT_DIRECTORY: ""
    GIT_TERMINAL_PROMPT: "0"
    GIT_WORK_TREE: ""
    HOME: "[TEST_HOME]"
    LANG: C
    LC_ALL: C
    MOCK_CONFIG_DIR: "[MOCK_CONFIG_DIR]"
    NO_COLOR: ""
    OPENCODE_CONFIG_DIR: "[TEST_OPENCODE_CONFIG]"
    PATH: "[PATH]"
    PSModulePath: ""
    RUST_LOG: warn
    SHELL: ""
    TERM: alacritty
    USERPROFILE: "[TEST_HOME]"
    WORKTRUNK_APPROVALS_PATH: "[TEST_APPROVALS]"
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
    WORKTRUNK_SYSTEM_CONFIG_PATH: "[TEST_SYSTEM_CONFIG]"
    WORKTRUNK_TEST_BASH_INSTALLED: "0"
    WORKTRUNK_TEST_CLAUDE_INSTALLED: "0"
    WORKTRUNK_TEST_DELAYED_STREAM_MS: "-1"
    WORKTRUNK_TEST_EPOCH: "1735776000"
    WORKTRUNK_TEST_FISH_INSTALLED: "0"
    WORKTRUNK_TEST_NUSHELL_ENV: "0"
    WORKTRUNK_TEST_OPENCODE_INSTALLED: "0"
    WORKTRUNK_TEST_POWERSHELL_ENV: "0"
    WORKTRUNK_TEST_POWERSHELL_INSTALLED: "0"
    WORKTRUNK_TEST_SKIP_URL_HEALTH_CHECK: "1"
    WORKTRUNK_TEST_ZSH_INSTALLED: "0"
    XDG_CONFIG_HOME: "[TEST_CONFIG_HOME]"
---
success: true
exit_code: 0
----- stdout -----
  [1mBranch[0m     [1mStatus[0m        [1mHEAD±[0m    [1mmain↕[0m     [1mmain…±[0m  [1mRemote⇅[0m  [1mCI[0m  [1mPath[0m               [1mCommit[0m    [1mAge[0m   [1mMessage
@ main         [36m?[39m [2m^[22m[2m|[22m                                      [2m|[0m     [32m●[0m   .                  [2m05a4a45d[0m  [2m16h[0m   [2mInitial commit
+ [2mfeature[0m        [2m_[22m[2m|[22m                                      [2m|[0m     [32m●[0m   [2m../repo.feature[0m    [2m05a4a45d[0m  [2m16h[0m   [2mInitial commit
+ feature-a      [2m↑[22m[2m|[22m                [32m↑1[0m        [32m+1[0m          [2m|[0m     [2m[32m●[0m   ../repo.feature-a  [2m1b87d473[0m  [2m16h[0m   [2mAdd feature-a file
+ feature-b      [2m↑[22m[2m|[22m                [32m↑1[0m        [32m+1[0m          [2m|[0m     [2m[32m●[0m   ../repo.feature-b  [2mf62940fc[0m  [2m16h[0m   [2mAdd feature-b file
+ feature-c      [2m↑[22m[2m|[22m                [32m↑1[0m        [32m+1[0m          [2m|[0m     [2m[32m●[0m   ../repo.feature-c  [2m345c7c93[0m  [2m16h[0m   [2mAdd feature-c file

[2m○[22m [2mShowing 5 worktrees, 1 with changes, 3 ahead

----- stderr -----
[33m▲[39m [33mProject config: [1m[ci][22m is deprecated in favor of [1m[forge][22m[39m
[2m↳[22m [2mTo see details, run [4mwt config show[24m; to apply updates, run [4mwt config update[24m[22m
[2m[W][22m Invalid CI platform in config: 'invalid_platform'. Expected 'github', 'gitlab', or 'azure-devops'.
[2m[W][22m Invalid CI platform in config: 'invalid_platform'. Expected 'github', 'gitlab', or 'azure-devops'.
[2m[W][22m Invalid CI platform in config: 'invalid_platform'. Expected 'github', 'gitlab', or 'azure-devops'.
[2m[W][22m Invalid CI platform in config: 'invalid_platform'. Expected 'github', 'gitlab', or 'azure-devops'.
[2m[W][22m Invalid CI platform in config: 'invalid_platform'. Expected 'github', 'gitlab', or 'azure-devops'.
